@@ -1,7 +1,10 @@
 ##/##/#### v0.2
             File slurping moved to dedicated function
-			Added option to turn auto touch off
-			Remove issue where touch would run on snapraid versions below 10.0
+            Added option to turn auto touch off
+            Remove issue where touch would run on snapraid versions below 10.0
+            Function snap_run now collects stderr/exitcode as well as stdout
+            Script will abort if snapraid has wrote to stderr asking for user intervention
+            Script will not continue when snapraid is carp'ing errors
 
 05/05/2016 v0.1
             Added emailing function for gmail and sendmail.
